# scion

./: go.mod  go.sum  go_deps.bzl
doc/: monitoring_setup.md
go/co/: main.go
go/lib/bloomfilter/: BUILD.bazel  bloomfilter.go  bloomfilter_test.go  doc.go
go/lib/ratelimiter/ratelimiter/: BUILD.bazel  doc.go  ratelimiter.go  ratelimiter_test.go
go/lib/ratelimiter/tokenbucket/: BUILD.bazel  doc.go  tokenbucket.go  tokenbucket_test.go
go/pkg/co/colibri/grpc/: BUILD.bazel  ratelimiter_service.go
go/pkg/proto/colibri/: ratelimiter.pb.go
go/pkg/router/: BUILD.bazel  dataplane.go  metrics.go
go/posix-router/: BUILD.bazel  main.go
go/scriptRL/: BUILD.bazel  main.go
grafana_dashboards/: monitoring.json
proto/colibri/v1/: BUILD.bazel  ratelimiter.proto
