load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bloomfilter.go",
        "doc.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/bloomfilter",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_collections_go_datastructures//bitarray:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["bloomfilter_test.go"],
    embed = [":go_default_library"],
)
