load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["ratelimiter.go"],
    importpath = "github.com/scionproto/scion/go/lib/ratelimiter/ratelimiter",
    visibility = ["//visibility:public"],
    deps = ["//go/lib/ratelimiter/tokenbucket:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "ratelimiter_test.go",
    ],
)
